Verificamos el boton buscar

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Keep</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <label>Search Note</label>
-        <form id="form-buscar">
-            <input id="titulo-buscar" placeholder="titulo">
-        </form>
+      <h2>Formulario Buscar</h2>
+      <form id="form-buscar">
+        <input type="text" id="titulo-buscar" placeholder="Ingresa un titulo" />
+        <button type="submit" id="btn-buscar">Buscar</button>
+      </form>
+      <div id="div-buscado">
+
+      </div>
     </div>
-</body>
+  </body>
 </html>
