Creamos el formulario crear nota

--- a/index.html
+++ b/index.html
@@ -13,8 +13,23 @@
         <input type="text" id="titulo-buscar" placeholder="Ingresa un titulo" />
         <button type="submit" id="btn-buscar">Buscar</button>
       </form>
-      <div id="div-buscado">
+      <div id="div-buscado"></div>
+    </div>
 
+    <div class="contenedor">
+      <div class="div-formulario">
+        <h2>Formulario Crear</h2>
+        <form action="#" id="formulario">
+          <input type="text" id="titulo" placeholder="Ingresa un titulo" />
+          <input type="text" id="texto" placeholder="Ingresa el texto" />
+          <button type="submit" id="btn-crear">Crear</button>
+        </form>
+      </div>
+      <div class="div-listado">
+        <h2>Notas</h2>
+        <div class="div-notas">
+          
+        </div>
       </div>
     </div>
   </body>
