--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/bootstrap.css">
     <title>Google Keep</title>
   </head>
   <body>
@@ -28,7 +29,7 @@
       <div class="div-listado">
         <h2>Notas</h2>
         <div class="div-notas">
-          
+
         </div>
       </div>
     </div>
